--- a/src/main/resources/templates/task.template.html
+++ b/src/main/resources/templates/task.template.html
@@ -3,3 +3,12 @@
   <input type="text" ng-model="IMAGE" ng-required="true" />
   <span class="form_error" ng-show="GOINPUTNAME[IMAGE].$error.server">{{ GOINPUTNAME[IMAGE].$error.server }}</span>
 </div>
+<div class="form_item_block">
+  <label>Command:</label>
+  <input type="text" ng-model="COMMAND" ng-required="true" />
+  <span class="form_error" ng-show="GOINPUTNAME[COMMAND].$error.server">{{ GOINPUTNAME[COMMAND].$error.server }}</span>
+</div>
+<div class="form_item_block">
+  <label>Arguments:</label>
+  <textarea ng-model="ARGUMENTS" ng-required="false" cols="50" rows="5" placeholder="Enter each argument on a new line"></textarea>
+</div>
